# candle-index-select-cu

./: Cargo.toml  Readme.md  bench_pytorch.py  build.rs
benches/: bench_index_select.rs  bench_pytorch.py
kernels/: index_select.cu  index_select_api.cu
src/: ffi.rs  lib.rs
tests/: index_select.rs
